@@ -3,6 +3,12 @@ man-db 2.4.4
 
 Major changes since man-db 2.4.3:
 
+	Fixes:
+	------
+
+	o Ignore SIGINT and SIGQUIT while running subprocesses, so that
+	  typing Ctrl-C doesn't kill less (broken in 2.4.3).
+
 	Improvements:
 	-------------
 
